[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sound/Take damage and Gain Life/05Buff GatherBuff Gather 2.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/05Buff GatherBuff Gather 4.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/05Buff GatherBuff Gather 1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/Take damage and Gain Life/05Buff GatherBuff Gather 3.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/GlobalGather.gd" type="Script" id=5]

[node name="GlobalBuff" type="Node2D"]
script = ExtResource( 5 )

[node name="BuffGather1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Collect"

[node name="BuffGather2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Collect"

[node name="BuffGather3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Collect"

[node name="BuffGather4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Collect"

[connection signal="finished" from="BuffGather1" to="." method="_on_BuffGather1_finished"]
[connection signal="finished" from="BuffGather2" to="." method="_on_BuffGather2_finished"]
[connection signal="finished" from="BuffGather3" to="." method="_on_BuffGather3_finished"]
[connection signal="finished" from="BuffGather4" to="." method="_on_BuffGather4_finished"]
